[gd_scene load_steps=55 format=2]

[ext_resource path="res://Assets/Actor/Characters/Skeleton/SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/theme.tres" type="Theme" id=3]

[sub_resource type="CapsuleShape2D" id=42]
height = 0.0

[sub_resource type="CircleShape2D" id=43]
radius = 239.019

[sub_resource type="CapsuleShape2D" id=62]
radius = 8.0
height = 14.0

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 48, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 48, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 16, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=87]
animations = [ {
"frames": [ SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "attack_down",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "attack_up",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="Animation" id=88]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack_down" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=89]
resource_name = "attack_down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_down" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=90]
resource_name = "attack_left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_left" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=91]
resource_name = "attack_right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_right" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=92]
resource_name = "attack_up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_up" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=93]
resource_name = "walk_down"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_down" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=94]
resource_name = "walk_left"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_left" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=95]
resource_name = "walk_right"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_right" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=96]
resource_name = "walk_up"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_up" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=104]
animation = "attack_down"

[sub_resource type="AnimationNodeAnimation" id=105]
animation = "attack_up"

[sub_resource type="AnimationNodeAnimation" id=106]
animation = "attack_left"

[sub_resource type="AnimationNodeAnimation" id=107]
animation = "attack_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=108]
blend_point_0/node = SubResource( 104 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 105 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 106 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 107 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=97]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=98]
animation = "walk_up"

[sub_resource type="AnimationNodeAnimation" id=99]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=100]
animation = "walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=101]
blend_point_0/node = SubResource( 97 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 98 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 99 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 100 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=109]

[sub_resource type="AnimationNodeStateMachineTransition" id=110]

[sub_resource type="AnimationNodeStateMachine" id=102]
states/attack/node = SubResource( 108 )
states/attack/position = Vector2( 312, 122 )
states/run/node = SubResource( 101 )
states/run/position = Vector2( 530, 127 )
transitions = [ "attack", "run", SubResource( 109 ), "run", "attack", SubResource( 110 ) ]
start_node = "run"

[sub_resource type="AnimationNodeStateMachinePlayback" id=103]

[node name="skeleton" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 22
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 42 )

[node name="player_detector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detector"]
shape = SubResource( 43 )

[node name="fireball_position" type="Position2D" parent="."]
position = Vector2( 13, 0 )

[node name="bullet_cooldown" type="Timer" parent="."]
autostart = true

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 62 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = -14.0
margin_top = -23.0
margin_right = 48.0
margin_bottom = -9.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
percent_visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 87 )
animation = "attack_down"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 88 )
anims/attack_down = SubResource( 89 )
anims/attack_left = SubResource( 90 )
anims/attack_right = SubResource( 91 )
anims/attack_up = SubResource( 92 )
anims/walk_down = SubResource( 93 )
anims/walk_left = SubResource( 94 )
anims/walk_right = SubResource( 95 )
anims/walk_up = SubResource( 96 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 102 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 103 )
parameters/attack/blend_position = Vector2( -0.147812, -0.284483 )
parameters/run/blend_position = Vector2( -0.559042, 0.173653 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_exited" from="player_detector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="bullet_cooldown" to="." method="_on_bullet_cooldown_timeout"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
